--- a/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
@@ -116,17 +116,6 @@
           </ul>
         </div>
       </div>
-      <!-- <app-price-input  style="display: inline-block;"
-          [placeholder]="'Amount'"
-          [currencyName]="activeFiat.name"
-          (customInput)="amountInput($event)"
-          (customBlur)="amountBlur($event)"
-          formControlName="amount"
-          name="amount"
-          class="fiat-amount"
-          >
-
-        </app-price-input> -->
     </div>
   </form>
   <div
@@ -200,41 +189,17 @@
         </button>
       </div>
     </div>
-    <!-- <div class="right-part"> -->
-    <!-- <div class="left-block">
-        <div class="item-info">
-          <span class="key-info">Amount</span>
-          <span class="value-info">1,111,821.00 EUR</span>
-        </div>
-        <div class="item-info">
-          <span class="key-info">Comission</span>
-          <span class="value-info">40%</span>
-        </div>
-        <div class="item-info">
-          <span class="key-info">Fee amount</span>
-          <span class="value-info">430 EUR</span>
-        </div>
-        <div class="item-info">
-          <span class="key-info">Added to payment</span>
-          <span class="value-info">710 EUR</span>
-        </div>
-        <div class="item-info">
-          <span class="key-info">Total (with comission)</span>
-          <span class="value-info">1,111,821.00 EUR</span>
-        </div>
-      </div> -->
-    <!-- </div> -->
   </div>
   <button
     class="btn btn--active balance__title-btn"
     (click)="closeSendQuberaPopup.emit(true)"
   >OK</button>
   <div class="notice-block">
-    <span class="head-notice">Напоминаем:</span>
+    <span class="head-notice">{{'Please note:' | translate}}</span>
     <ul>
       <li>
-        <span>Это реквизиты вашего личного счёта в FUG теперь вы можете пополнять свой счёт и без комиссии переводить деньги между вашим личным счетом и
-          торговым счетом на Exrates.
+        <span>
+          {{'Those are your FUG account details. Now you can make a deposit and transfer your funds to/from your Exrates trading account without a commission.' | translate }}
         </span>
       </li>
     </ul>
