--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
@@ -89,7 +89,7 @@
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Amount' | translate}}</div>
         <div class="table__details-item-value">
-          {{item.amountBase | currencyFormat:arrPairName[0]}} {{arrPairName[0]}}
+          {{item.amountBase | currencyFormat}} {{arrPairName[0]}}
         </div>
       </div>
       <div
