--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -348,7 +348,7 @@
           </td>
           <td class="table__cell">
             <span>
-              {{item.amountBase | currencyFormat:currency(item.currencyPairName, 1)}}
+              {{item.amountBase | currencyFormat}}
               {{item.currencyPairName | splitCurrency: 1}}
             </span>
           </td>
@@ -357,24 +357,24 @@
           </td>
           <td class="table__cell">
             <span>
-              {{(item.exExchangeRate || item.limitRate) | currencyFormat:currency(item.currencyPairName, 2)}}
+              {{(item.exExchangeRate || item.limitRate) | currencyFormat}}
               {{item.currencyPairName | splitCurrency: 2}}
             </span>
           </td>
           <td class="table__cell">
             <span>
-              {{item.orderBaseType !== 'STOP_LIMIT' ? '-' : item.stopRate  | currencyFormat:currency(item.currencyPairName, 2)}}
+              {{item.orderBaseType !== 'STOP_LIMIT' ? '-' : item.stopRate  | currencyFormat}}
               {{item.orderBaseType !== 'STOP_LIMIT' ? '' : item.currencyPairName | splitCurrency: 2}}
             </span>
           </td>
           <td class="table__cell">
             <span class="orders__comission"></span><span class="orders__comission-usd"><span>
-                {{item.commissionFixedAmount | currencyFormat:currency(item.currencyPairName, 2)}}
+                {{item.commissionFixedAmount | currencyFormat}}
                 {{item.currencyPairName | splitCurrency: 2}}</span></span>
           </td>
           <td class="table__cell">
             <span>
-              {{item.amountWithCommission | currencyFormat:currency(item.currencyPairName, 2)}}
+              {{item.amountWithCommission | currencyFormat}}
               {{item.currencyPairName | splitCurrency: 2}}
             </span>
           </td>
