--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -180,7 +180,7 @@
             *ngIf="scrollHeight"
           >
             <ng-container
-              *cdkVirtualFor="let pair of pairs"
+              *cdkVirtualFor="let pair of (pairs | currencySort :'currencyVolume')"
               class="markets_item"
             >
               <div
