DEVEX-3670 small fix

--- a/src/app/funds/balance/qubera-mob/qubera-mob.component.html
+++ b/src/app/funds/balance/qubera-mob/qubera-mob.component.html
@@ -267,6 +267,7 @@
       </div>
 
       <button
+        *ngSwitchCase="'Pending'"
         class="print"
         (click)="quberaKycVerification.emit(true)"
       >
