--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -1,5 +1,5 @@
 <div
-  class="widget widget--gradient"
+  class="widget widget--gradient markets-widget"
   #mobileContainer
 >
   <!-- MOBILE START -->
