--- a/src/app/dashboard/components/trade-history/trade-history.component.html
+++ b/src/app/dashboard/components/trade-history/trade-history.component.html
@@ -1,4 +1,4 @@
-<div class="widget widget--gradient">
+<div class="widget widget--gradient trading-history-widget">
   <div class="widget__header panel-heading">
     <span class="widget__name">{{'Trade history' | translate}}</span>
     <a
