--- a/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
+++ b/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
@@ -1,4 +1,4 @@
-<div class="trading-wr--mobile">
+<div class="trading-wr--mobile widget-trading">
   <div class="row row--jcsb row--aic widget__trading-row">
     <div class="dropdown widget__limit-dropdown">
       <div
@@ -10,20 +10,7 @@
         {{showLimit(limit, true)}}
       </div>
     </div>
-    <!-- <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
-      <div style="margin-left: auto;">
-        {{'Pay no fees:' | translate}}
-        <img src="../../assets/img/fire.svg" style="margin: 0 4px;">
-        <a href="#">{{'Become VIP' | translate}}</a>
-      </div>
-    </div> -->
   </div>
-  <!-- <div
-    class="row row__info"
-    *ngIf="dropdownLimitValue === baseType.MARKET"
-  >
-    Max available to buy market order: {{maxMarketOrder | currencyFormat}} {{arrPairName[0]}}
-  </div> -->
   <div class="widget__trading-form--wr">
     <form
       class="widget__trading-form"
@@ -363,8 +350,6 @@
       <div class="trading-notification__title">
         {{showLimit(createdOrder?.baseType, true)}} {{createdOrder?.orderType}} {{' Order created!' | translate}}
       </div>
-      <!-- <p>{{'Status:' | translate}} {{message}}</p> -->
-      <!--<p>Submitted exchange limit sell order for 9 ZRX by using BTC</p>-->
     </div>
   </div>
 </div>
@@ -415,8 +400,6 @@
         {{showLimit(createdOrder?.baseType, true)}} {{createdOrder?.orderType}} {{' Order not created!' | translate}}
       </div>
       <div *ngFor="let message of errorMessages"> {{message}}</div>
-      <!-- <p> {{'Status:' | translate}} {{message}}</p> -->
-      <!--<p>Submitted exchange limit sell order for 9 ZRX by using BTC</p>-->
     </div>
   </div>
 </div>
