--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -1469,3 +1469,11 @@ app-embedded-orders-mobile{
         position: absolute;
       }
     }
+.loading-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+      background-color: #23243F;
+}
